--- a/Notebook/HairdresserTipsByCulture.ipynb
+++ b/Notebook/HairdresserTipsByCulture.ipynb
@@ -2,8 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "74ab9ad2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "e28c2391",
+   "id": "6f6456f5",
    "metadata": {},
    "outputs": [],
    "source": []
